@@ -28,7 +28,7 @@
   e2f730e78dc27254776b672fc007a4bef3dd0f56 2010090601 mingw32-autotools.xml
   31874b31b811211470b739b8af7fc6b9a97331e6 2013072200 mingw32-base.xml
   221dd61fa0e2d7745ba41d05d18a3114e946c513 2012073100 mingw32-basic-bsdtar.xml
-  770165afae7b51cfa83d34d0115d7dd563b4557f 2015092000 mingw32-binutils.xml
+  3df80e02d9d812756e8360dd4836722d1d2a0f2c 2017071200 mingw32-binutils.xml
   b4c60a4702749a0369b5059e7c1f50ce567e2c95 2012073100 mingw32-bzip2.xml
   c2fa4fe580615c774f72216fb06e35a909a08ba6 2012040200 mingw32-cygutils.xml
   6f0af5165a7ca9f67fdb7840dc5f7a5dda999c2a 2015122200 mingw32-dos2unix.xml
@@ -50,7 +50,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   8d3a7125499a85916b53efb4c897ac907e2490ab 2015082000 mingw32-mpc.xml
   8a11de23e7a89fd11436bdf162ef90712f30101b 2013102300 mingw32-mpfr.xml
-  56f4032058328cacfabe64fa46706d72c2fa931e 2017030900 mingw32-package-list.xml
+  56f4032058328cacfabe64fa46706d72c2fa931e 2017071200 mingw32-package-list.xml
   1f15439ee5f66ec22321c7aa853559b6f8f7172f 2015090800 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   6032af6ff68aa4821cf51938781fd9e75f05de5f 2016082200 mingw32-pthreads-w32.xml
