@@ -24,6 +24,7 @@
 
       <component class="bin">
         <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
+        <release tarname="binutils-2.28-1-mingw32-bin.tar.xz" />
         <release tarname="binutils-2.25.1-1-mingw32-bin.tar.xz" />
         <release tarname="binutils-2.24-1-mingw32-bin.tar.xz" />
         <release tarname="binutils-2.23.2-1-mingw32-bin.tar.lzma" >
@@ -45,6 +46,7 @@
       </component>
 
       <component class="dev">
+        <release tarname="binutils-2.28-1-mingw32-dev.tar.xz" />
         <release tarname="binutils-2.25.1-1-mingw32-dev.tar.xz" />
         <release tarname="binutils-2.24-1-mingw32-dev.tar.xz" />
         <release tarname="binutils-2.23.2-1-mingw32-dev.tar.lzma" />
@@ -74,18 +76,21 @@
       </component>
 
       <component class="info">
+        <release tarname="binutils-2.28-1-mingw32-info.tar.xz" />
         <release tarname="binutils-2.25.1-1-mingw32-info.tar.xz" />
         <release tarname="binutils-2.24-1-mingw32-info.tar.xz" />
         <release tarname="binutils-2.23.2-1-mingw32-info.tar.lzma" />
       </component>
 
       <component class="man">
+        <release tarname="binutils-2.28-1-mingw32-man.tar.xz" />
         <release tarname="binutils-2.25.1-1-mingw32-man.tar.xz" />
         <release tarname="binutils-2.24-1-mingw32-man.tar.xz" />
         <release tarname="binutils-2.23.2-1-mingw32-man.tar.lzma" />
       </component>
 
       <component class="lang">
+        <release tarname="binutils-2.28-1-mingw32-lang.tar.xz" />
         <release tarname="binutils-2.25.1-1-mingw32-lang.tar.xz" />
         <release tarname="binutils-2.24-1-mingw32-lang.tar.xz" />
         <release tarname="binutils-2.23.2-1-mingw32-lang.tar.lzma" />
