@@ -1,3 +1,10 @@
+2017-07-12  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Upgrade mingw32-binutils package to version 2.28-1.
+
+	* mingw32/mingw32-binutils.xml: Add new release specifications.
+	* common/issue.log mingw32/issue.log: Update accordingly.
+
 2017-03-09  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Publish MinGW.org WSL-5.0 package set.
